themes/main/src/sass/partials/footer.scss
@import '../_helpers/query';
@import '../_helpers/fonts';
@import '../_helpers/colors';
@import '../_helpers/constants';
@import '../_helpers/mixins';

$text-padding: 2px;
$social-margin: 10px;

#page-footer {
  display: -webkit-flex; //Old Safari
  display: flex;
  -webkit-flex-direction: column; //Old Safari
  flex-direction: column;
  -webkit-align-items: center; //Old Safari
  align-items: center;
  width: 100%;
  padding: 25px 0;
  background-color: $background;
  @include get-font(FOOTER);
}

#page-footer .footer-container {
  @include media-query(THREE) {
    width: 3 * $COLUMN-WIDTH;
    margin: 0 auto;
    padding: 20px 0;
  }

  @include media-query(FOUR) {
    width: 4 * $COLUMN-WIDTH;
  }

  @include media-query(FIVE) {
    width: 5 * $COLUMN-WIDTH;
  }
}

#page-footer .footer-photo-caption-list {
  @include media-query(THREE) {
    width: 3 * $COLUMN-WIDTH;
    padding: 20px 0;
    margin: 0 auto;
  }

  @include media-query(FOUR) {
    width: 4 * $COLUMN-WIDTH;
  }
}


#page-footer .footer-container-internal {
  @include media-query(THREE) {
    width: 100%;
    max-width: (3 * $COLUMN-WIDTH) + (2 * $LATERAL-PAGE-SPACE);
    @include column-lateral-spacing($LATERAL-PAGE-SPACE);
  }
}

#page-footer .footer-header {
  margin-bottom: 10px;
  img {
    height: 35px;

    @include media-query(THREE) {
      height: 50px;
    }
  }
}

#page-footer .footer-items {
  @include media-query(THREE) {
    display: -webkit-flex; //Old Safari
    display: flex;
  }

  .footer-menu {
    display: none;

    @include media-query(THREE) {
      display: inline-block;
      width: 120px;
    }

    li {
      padding: $text-padding;
    }
  }
}

#page-footer .footer-social-block {
  @include media-query(THREE) {
    margin-left: 130px;
  }

  p {
    display: none;

    @include media-query(THREE) {
      display: inline-block;
      margin-left: $social-margin;
      padding-top: $text-padding;
    }
  }

  .social-media-icons {
    display: -webkit-flex; //Old Safari
    display: flex;
    -webkit-justify-content: center; //Old Safari
    justify-content: center;
    margin-bottom: 5px;
    margin-top: 5px;

    img {
      height: 25px;
      margin: 0 $social-margin;

      @include media-query(THREE) {
        height: 20px;
      }
    }
  }
}

